# Data-Pipeline

./: .env  .gitignore  Readme.md  pyproject.toml  test.ipynb
.github/: CICD.txt
.github/workflows/: ci_cd.yml
model/: green_taxi_tip_prediction_model.joblib
nyc_taxi_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config.py  filiter.py  getdata.py  pipeline.py  train.py
src/data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_pipeline.py
